fdo#81286 : Instant updates in SUM/AVERAGE in status bar

Change-Id: I86ec7c73090b93cf080ced2bd5e24d98e2b3ac0e