sc/source/core/data/documen4.cxx
@@ -598,7 +598,7 @@ bool ScDocument::GetSelectionFunction( ScSubTotalFunc eFunc,
 
     ScMarkData aMark(rMark);
     aMark.MarkToMulti();
-    if (!aMark.IsMultiMarked())
+    if (!aMark.IsMultiMarked() && !aMark.IsCellMarked(rCursor.Col(), rCursor.Row(), false))
         aMark.SetMarkArea(rCursor);
 
     SCTAB nMax = static_cast<SCTAB>(maTabs.size());
